@@ -1,5 +1,9 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Sep-04-2007 patrick     Use new environment variable SNX_DATA_DIR as a way to
+                        look up files in SNX_BASE_DIR/share/sonix.
+                        NEW VERSION: 1.3.3
+Sep-04-2007 patrick     Set SNX_BASE_DIR automatically on all platforms.
 Jul-08-2007 patrick     Debug-enabled code linked against the release runtime
                         on Windows is now named the same as optimized code.
                         The debug DLLs are installed in the "debug"
